--- a/frontend/src/app/emotion-detection/one-image-detection/one-image-detection.component.html
+++ b/frontend/src/app/emotion-detection/one-image-detection/one-image-detection.component.html
@@ -43,19 +43,56 @@
   </div>
 
   <!-- Pie Chart -->
+<!--  <div class="col-xl-4 col-lg-5">-->
+<!--    <div class="card shadow mb-4">-->
+<!--      &lt;!&ndash; Card Header - Dropdown &ndash;&gt;-->
+<!--      <div-->
+<!--        class="card-header py-3 d-flex flex-row align-items-center justify-content-between">-->
+<!--        <h6 class="m-0 font-weight-bold text-primary">Upload section</h6>-->
+<!--        <div class="dropdown no-arrow">-->
+<!--          <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink5"-->
+<!--             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>-->
+<!--          </a>-->
+<!--          <div class="dropdown-menu dropdown-menu-right shadow animated&#45;&#45;fade-in"-->
+<!--               aria-labelledby="dropdownMenuLink5">-->
+<!--            <div class="dropdown-header">Dropdown Header:</div>-->
+<!--            <a class="dropdown-item" href="#">Action</a>-->
+<!--            <a class="dropdown-item" href="#">Another action</a>-->
+<!--            <div class="dropdown-divider"></div>-->
+<!--            <a class="dropdown-item" href="#">Something else here</a>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      &lt;!&ndash; Card Body &ndash;&gt;-->
+<!--      <div class="card-body">-->
+<!--        <form #uploadForm="ngForm">-->
+<!--          <div class="form-group">-->
+<!--            <label>Upload</label> <input ngModel name="fileUpload" #fileUpload-->
+<!--                                         (change)="handleFileInput($event.target['files'])" class="form-control"-->
+<!--                                         type="file">-->
+<!--          </div>-->
+<!--          <div class="form-group">-->
+<!--            <button class="btn btn-primary" (click)="uploadFileToActivity()">Submit</button>-->
+<!--            <button class="btn btn-primary" (click)="testCors()">TestCors</button>-->
+<!--          </div>-->
+<!--        </form>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="col-xl-4 col-lg-5">
     <div class="card shadow mb-4">
       <!-- Card Header - Dropdown -->
       <div
         class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-        <h6 class="m-0 font-weight-bold text-primary">Upload section</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Hammane</h6>
         <div class="dropdown no-arrow">
-          <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink5"
+          <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink7"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-               aria-labelledby="dropdownMenuLink5">
+               aria-labelledby="dropdownMenuLink7">
             <div class="dropdown-header">Dropdown Header:</div>
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
@@ -65,14 +102,20 @@
         </div>
       </div>
       <!-- Card Body -->
-      <div class="card-body" >
-        <form #uploadForm="ngForm">
-          <div class="form-group">
-            <label>Upload</label> <input ngModel name="fileUpload"  #fileUpload (change)="handleFileInput($event.target['files'])"   class="form-control" type="file">
-          </div>
-          <div class="form-group">
-            <button class="btn btn-primary" (click)="uploadFileToActivity()">Submit</button>
-            <button class="btn btn-primary" (click)="testCors()">TestCors</button>
+      <div class="card-body">
+        <form [formGroup]="detectionForm" (ngSubmit)="this.onSubmit()">
+          <div class="alert alert-danger" *ngIf="message && message != ''">{{message}}</div>
+          <div class="form-row">
+            <div class="form-group col-12 text-center">
+              <img *ngIf="this.currentImage != ''" src="{{this.currentImage}}" style="max-height: 300px;max-width: 300px;" alt="image">
+              <div class="custom-file">
+                <input type="file" (change)="onFileChange($event)" class="custom-file-input" accept="image/jpeg" id="image">
+                <label class="custom-file-label" for="image">Choose file</label>
+              </div>
+            </div>
+            <div class="text-right">
+              <button class="btn btn-primary mr-1" type="submit">Submit</button>
+            </div>
           </div>
         </form>
       </div>
